# lvsnbot_description

./: CMakeLists.txt  package.xml
launch/: lvsnbot.launch
robots/: create_circles_kinect.urdf.xacro  slim_create_circles_kinect.urdf.xacro
urdf/: lvsnbot_library.urdf.xacro  lvsnbot_properties.urdf.xacro
urdf/sensors/: kinect.urdf.xacro
urdf2/: lvsnbot_library.urdf.xacro  lvsnbot_properties.urdf.xacro
urdf2/bases/: create.urdf.xacro
